--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -7,6 +7,7 @@
   <button (click)="inputFunction($event)" value="*">x</button>
   <button (click)="inputFunction($event)" value="/">/</button>
   <button (click)="total()">=</button>
+  <button (click)="clear()">AC</button>
 </div>
 <div class="buton">
   <button (click)="inputFunction($event)" value="1">1</button>
